# traduko

./: .gitignore  LICENSE  README.md  README.zh-TW.md
core/: pyproject.toml
core/packaging/: build_sidecar.sh  sidecar_entry.py  traduko-core.spec
core/src/traduko/: artifacts.py  asrsetup.py  budget.py  cli.py  config.py  eventlog.py  events.py  executor.py  glossary.py  index.py  mcphub.py  media.py  models.py  notify.py  paths.py  preflight.py  profiles.py  prompts.py  proposals.py  seeds.py  segmenting.py  skillhub.py  styles.py  styles_render.py  subtitles.py  tasks.py  translate.py  workspace.py
core/src/traduko/agents/: __init__.py  assistant.py  assistant_store.py  collab.py  proofread.py  recorder.py  runner.py  tools.py
core/src/traduko/asr/: __init__.py  base.py  cloud.py  engines.py  macos.py  macos_helper.swift  whisper.py
core/src/traduko/bot/: api.py  commands.py  progress.py  render.py  runner.py
core/src/traduko/documents/: epubdoc.py  htmldoc.py  markdown.py  model.py  qc.py  translate.py
core/src/traduko/dubbing/: __init__.py  align.py  client.py  engines.py  models.py  preview.py  runner.py  setup.py
core/src/traduko/glossary/: __init__.py  migrate.py  models.py  prompt.py  resolve.py  store.py
core/src/traduko/llm/: __init__.py  _http.py  anthropic.py  base.py  fake.py  gemini.py  openai_compat.py  scripted.py
core/src/traduko/pdfengine/: __init__.py  runner.py  setup.py
core/src/traduko/service/: app.py  auth.py  broadcast.py  parentwatch.py  syncsched.py  systemlog.py  worker.py
core/src/traduko/stages/: __init__.py  agent.py  audio.py  av.py  base.py  doc.py  (+6 more)
core/src/translator_core/: artifacts.py  events.py  fsutil.py  paths.py  profiles.py  tasks.py
core/tests/: test_agent_collab.py  test_agent_recorder.py  test_agent_runner.py  test_agent_tools.py  test_artifacts.py  test_asr.py  test_asr_cloud.py  test_asr_engines.py  test_asr_macos.py  test_asr_setup.py  test_assistant.py  test_assistant_store.py  test_bot_api.py  test_bot_commands.py  test_bot_progress.py  test_bot_render.py  test_bot_runner.py  test_budget.py  test_cli.py  test_config.py  test_documents_epub.py  test_documents_html.py  test_documents_markdown.py  test_documents_model.py  test_documents_qc.py  test_documents_translate.py  test_dubbing_align.py  test_dubbing_client.py  test_dubbing_engines.py  test_dubbing_preview.py  test_dubbing_runner.py  test_dubbing_setup.py  test_e2e.py  test_eventlog.py  test_events.py  test_executor.py  test_export_stages.py  test_export_studio_stages.py  test_glossary.py  test_glossary_migrate.py  (+43 more)
(+177 files in other folders)
