[project]
name = "translator-core"
version = "0.1.0"
description = "Engine core for an open-source automatic translation workstation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
translator-core = "translator_core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translator_core"]
