[project]
name = "traduko"
version = "0.2.0"
description = "Engine core for Traduko, an open-source automatic translation workstation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12",
    "discord-py>=2.4",
    "ebooklib>=0.18",
    "lxml>=5.0",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.0"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
traduko = "traduko.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traduko"]

[tool.pytest.ini_options]
filterwarnings = [
    # discord.py imports the stdlib audioop module, deprecated since 3.11;
    # third-party noise we cannot fix locally.
    "ignore:'audioop' is deprecated:DeprecationWarning",
    # fastapi's TestClient shim re-exports starlette.testclient, which warns
    # about its httpx dependency; third-party noise we cannot fix locally.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
